crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_tpch_simple_q1_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q1"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                             |
|               |  Projection: max(lineitem.l_orderkey)                                                                                                                                 |
|               |   Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_orderkey)]]                                                                                                          |
|               |     TableScan: lineitem projection=[l_orderkey]                                                                                                                       |
| physical_plan | SchemaCastScanExec                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                     |
|               |     BytesProcessedExec                                                                                                                                                |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT max("lineitem"."l_orderkey") FROM "lineitem" |
|               |                                                                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
