crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_tpch_simple_q2_explain_sf10.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q2"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                              |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                         |
|               |  Projection: lineitem.l_linenumber                                                                                                                                                                                                                                |
|               |   Filter: lineitem.l_linenumber = (<subquery>)                                                                                                                                                                                                                    |
|               |     Subquery:                                                                                                                                                                                                                                                     |
|               |       Projection: max(lineitem.l_linenumber)                                                                                                                                                                                                                      |
|               |         Aggregate: groupBy=[[]], aggr=[[max(lineitem.l_linenumber)]]                                                                                                                                                                                              |
|               |           TableScan: lineitem                                                                                                                                                                                                                                     |
|               |     TableScan: lineitem projection=[l_linenumber]                                                                                                                                                                                                                 |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                |
|               |   CooperativeExec                                                                                                                                                                                                                                                 |
|               |     BytesProcessedExec                                                                                                                                                                                                                                            |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db initial_sql=SELECT "lineitem"."l_linenumber" FROM "lineitem" WHERE ("lineitem"."l_linenumber" = (SELECT max("lineitem"."l_linenumber") FROM "lineitem")) |
|               |                                                                                                                                                                                                                                                                   |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
