crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_tpch_simple_q3_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q3"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                    |
|               |   Federated                                                                                                                                                                                                                                           |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                              |
|               |   Projection: lineitem.l_comment, lineitem.l_partkey                                                                                                                                                                                                  |
|               |     Sort: lineitem.l_linenumber DESC NULLS FIRST                                                                                                                                                                                                      |
|               |       Projection: lineitem.l_comment, lineitem.l_partkey, lineitem.l_linenumber                                                                                                                                                                       |
|               |         TableScan: lineitem projection=[l_partkey, l_linenumber, l_comment]                                                                                                                                                                           |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                    |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                  |
|               |     VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db initial_sql=SELECT "lineitem"."l_comment", "lineitem"."l_partkey" FROM "lineitem" ORDER BY "lineitem"."l_linenumber" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
