crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_tpch_simple_q4_explain_sf100.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                        |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                   |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                    |
|               |   Sort: lineitem.l_quantity DESC NULLS FIRST                                                                                                                                                                                                                                                                                                |
|               |     Projection: avg(lineitem.l_tax), lineitem.l_linenumber, lineitem.l_quantity                                                                                                                                                                                                                                                             |
|               |       Aggregate: groupBy=[[lineitem.l_linenumber, lineitem.l_quantity]], aggr=[[avg(lineitem.l_tax)]]                                                                                                                                                                                                                                       |
|               |         TableScan: lineitem projection=[l_linenumber, l_quantity, l_tax]                                                                                                                                                                                                                                                                    |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                          |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                           |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                      |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT avg("lineitem"."l_tax"), "lineitem"."l_linenumber", "lineitem"."l_quantity" FROM "lineitem" GROUP BY "lineitem"."l_linenumber", "lineitem"."l_quantity" ORDER BY "lineitem"."l_quantity" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                             |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
